@@ -26,6 +26,7 @@ Bugs fixed
 * #1585: Autosummary of modules broken in Sphinx-1.2.3.
 * #1610: Sphinx cause AttributeError when MeCab search option is enabled and
   python-mecab is not installed.
+* #1674: Do not crash if a module's ``__all__`` is not a list of strings.
 
 
 Release 1.2.3 (released Sep 1, 2014)
